# aeon

./: .gitignore  README.md  aeon.py  estimatorModels.py  genotype_from_vcf.py  pyproject.toml  requirements.txt  ruff.toml  visualisePCA.py
aeon/: aeon.py  estimatorModels.py  visualisePCA.py
aeon_ancestry/: aeon.py  estimatorModels.py  genotype_from_vcf.py  util.py  visualisePCA.py
aeon_ancestry/refs/: g1k_PCA_centres.csv
example/: ASW_example_ae.csv  ASW_example_ae_stats.csv  g1k_trio_ASW.bcf.csi
refs/: g1k_PCA_scale_factors.csv  pop2super.txt  reference_PC3s.txt
